// Copyright (c) 2019, AT&T Intellectual Property.  All rights reserved.
//
// SPDX-License-Identifier: LGPL-2.1-only
//
// IP Address protobuf definitions
//

syntax="proto2";

option go_package = "github.com/danos/vyatta-dataplane/protobuf/go/IPAddress";

message IPAddress {
	oneof address_oneof {
	      uint32 ipv4_addr = 1;
	      bytes ipv6_addr = 2;
	}
}

message IPPrefix {
	optional IPAddress address = 1;
	optional uint32 length = 2;
}
